--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 	<title>Learning git 2</title>
 </head>
 <body>
-	
+	<h1>Artist: Eminem</h1>
+	<h2>Song: Stan</h2>
+	<p>Dear Slim, I wrote but you still ain't callin 
+		I left my cell, my pager, and my home phone at the bottom 
+		I sent two letters back in autumn, you must not-a got 'em 
+		There probably was a problem at the post office or somethin 
+		Sometimes I scribble addresses too sloppy when I jot 'em 
+		but anyways; fuck it, what's been up? Man how's your daughter? 
+		My girlfriend's pregnant too, I'm bout to be a father 
+		If I have a daughter, guess what I'ma call her? 
+		I'ma name her Bonnie 
+		I read about your Uncle Ronnie too I'm sorry 
+		I had a friend kill himself over some bitch who didn't want him 
+		I know you probably hear this everyday, but I'm your biggest fan 
+		I even got the underground shit that you did with Skam 
+		I got a room full of your posters and your pictures man 
+		I like the shit you did with Rawkus too, that shit was fat 
+		Anyways, I hope you get this man, hit me back, 
+		just to chat, truly yours, your biggest fan 
+		This is Stan 
+	</p>
 </body>
 </html>
