--- a/index.html
+++ b/index.html
@@ -26,5 +26,33 @@
 		just to chat, truly yours, your biggest fan 
 		This is Stan 
 	</p>
+	<p>Dear Slim, you still ain't called or wrote, I hope you have a chance 
+		I ain't mad - I just think it's FUCKED UP you don't answer fans 
+		If you didn't wanna talk to me outside your concert 
+		you didn't have to, but you coulda signed an autograph for Matthew 
+		That's my little brother man, he's only six years old 
+		We waited in the blistering cold for you, 
+		four hours and you just said, "No." 
+		That's pretty shitty man - you're like his fuckin idol 
+		He wants to be just like you man, he likes you more than I do 
+		I ain't that mad though, I just don't like bein lied to 
+		Remember when we met in Denver - you said if I'd write you 
+		you would write back - see I'm just like you in a way 
+		I never knew my father neither; 
+		he used to always cheat on my mom and beat her 
+		I can relate to what you're saying in your songs 
+		so when I have a shitty day, I drift away and put 'em on 
+		cause I don't really got shit else so that shit helps when I'm depressed 
+		I even got a tattoo of your name across the chest 
+		Sometimes I even cut myself to see how much it bleeds 
+		It's like adrenaline, the pain is such a sudden rush for me 
+		See everything you say is real, and I respect you cause you tell it 
+		My girlfriend's jealous cause I talk about you 24/7 
+		But she don't know you like I know you Slim, no one does 
+		She don't know what it was like for people like us growin up 
+		You gotta call me man, I'll be the biggest fan you'll ever lose 
+		Sincerely yours, Stan -- P.S. 
+		We should be together too 
+	</p>
 </body>
 </html>
