--- a/index.html
+++ b/index.html
@@ -54,5 +54,34 @@
 		Sincerely yours, Stan -- P.S. 
 		We should be together too 
 	</p>
+	<p>
+		Dear Stan, I meant to write you sooner but I just been busy 
+		You said your girlfriend's pregnant now, how far along is she? 
+		Look, I'm really flattered you would call your daughter that 
+		and here's an autograph for your brother, 
+		I wrote it on the Starter cap 
+		I'm sorry I didn't see you at the show, I musta missed you 
+		Don't think I did that shit intentionally just to diss you 
+		But what's this shit you said about you like to cut your wrists too? 
+		I say that shit just clownin dogg, 
+		c'mon - how fucked up is you? 
+		You got some issues Stan, I think you need some counseling 
+		to help your ass from bouncing off the walls when you get down some 
+		And what's this shit about us meant to be together? 
+		That type of shit'll make me not want us to meet each other 
+		I really think you and your girlfriend need each other 
+		or maybe you just need to treat her better 
+		I hope you get to read this letter, I just hope it reaches you in time 
+		before you hurt yourself, I think that you'll be doin just fine 
+		if you relax a little, I'm glad I inspire you but Stan 
+		why are you so mad? Try to understand, that I do want you as a fan 
+		I just don't want you to do some crazy shit 
+		I seen this one shit on the news a couple weeks ago that made me sick 
+		Some dude was drunk and drove his car over a bridge 
+		and had his girlfriend in the trunk, and she was pregnant with his kid 
+		and in the car they found a tape, but they didn't say who it was to 
+		Come to think about, his name was.. it was you 
+		Damn!
+	</p>
 </body>
 </html>
