--- a/index.html
+++ b/index.html
@@ -3,85 +3,88 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Learning git 2</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Artist: Eminem</h1>
-	<h2>Song: Stan</h2>
-	<p>Dear Slim, I wrote but you still ain't callin 
-		I left my cell, my pager, and my home phone at the bottom 
-		I sent two letters back in autumn, you must not-a got 'em 
-		There probably was a problem at the post office or somethin 
-		Sometimes I scribble addresses too sloppy when I jot 'em 
-		but anyways; fuck it, what's been up? Man how's your daughter? 
-		My girlfriend's pregnant too, I'm bout to be a father 
-		If I have a daughter, guess what I'ma call her? 
-		I'ma name her Bonnie 
-		I read about your Uncle Ronnie too I'm sorry 
-		I had a friend kill himself over some bitch who didn't want him 
-		I know you probably hear this everyday, but I'm your biggest fan 
-		I even got the underground shit that you did with Skam 
-		I got a room full of your posters and your pictures man 
-		I like the shit you did with Rawkus too, that shit was fat 
-		Anyways, I hope you get this man, hit me back, 
-		just to chat, truly yours, your biggest fan 
-		This is Stan 
-	</p>
-	<p>Dear Slim, you still ain't called or wrote, I hope you have a chance 
-		I ain't mad - I just think it's FUCKED UP you don't answer fans 
-		If you didn't wanna talk to me outside your concert 
-		you didn't have to, but you coulda signed an autograph for Matthew 
-		That's my little brother man, he's only six years old 
-		We waited in the blistering cold for you, 
-		four hours and you just said, "No." 
-		That's pretty shitty man - you're like his fuckin idol 
-		He wants to be just like you man, he likes you more than I do 
-		I ain't that mad though, I just don't like bein lied to 
-		Remember when we met in Denver - you said if I'd write you 
-		you would write back - see I'm just like you in a way 
-		I never knew my father neither; 
-		he used to always cheat on my mom and beat her 
-		I can relate to what you're saying in your songs 
-		so when I have a shitty day, I drift away and put 'em on 
-		cause I don't really got shit else so that shit helps when I'm depressed 
-		I even got a tattoo of your name across the chest 
-		Sometimes I even cut myself to see how much it bleeds 
-		It's like adrenaline, the pain is such a sudden rush for me 
-		See everything you say is real, and I respect you cause you tell it 
-		My girlfriend's jealous cause I talk about you 24/7 
-		But she don't know you like I know you Slim, no one does 
-		She don't know what it was like for people like us growin up 
-		You gotta call me man, I'll be the biggest fan you'll ever lose 
-		Sincerely yours, Stan -- P.S. 
-		We should be together too 
-	</p>
-	<p>
-		Dear Stan, I meant to write you sooner but I just been busy 
-		You said your girlfriend's pregnant now, how far along is she? 
-		Look, I'm really flattered you would call your daughter that 
-		and here's an autograph for your brother, 
-		I wrote it on the Starter cap 
-		I'm sorry I didn't see you at the show, I musta missed you 
-		Don't think I did that shit intentionally just to diss you 
-		But what's this shit you said about you like to cut your wrists too? 
-		I say that shit just clownin dogg, 
-		c'mon - how fucked up is you? 
-		You got some issues Stan, I think you need some counseling 
-		to help your ass from bouncing off the walls when you get down some 
-		And what's this shit about us meant to be together? 
-		That type of shit'll make me not want us to meet each other 
-		I really think you and your girlfriend need each other 
-		or maybe you just need to treat her better 
-		I hope you get to read this letter, I just hope it reaches you in time 
-		before you hurt yourself, I think that you'll be doin just fine 
-		if you relax a little, I'm glad I inspire you but Stan 
-		why are you so mad? Try to understand, that I do want you as a fan 
-		I just don't want you to do some crazy shit 
-		I seen this one shit on the news a couple weeks ago that made me sick 
-		Some dude was drunk and drove his car over a bridge 
-		and had his girlfriend in the trunk, and she was pregnant with his kid 
-		and in the car they found a tape, but they didn't say who it was to 
-		Come to think about, his name was.. it was you 
-		Damn!
-	</p>
+	<div class="song-container">
+		<h1>Eminem</h1>
+		<h2>Song: Stan</h2>
+		<p>Dear Slim, I wrote but you still ain't callin 
+			I left my cell, my pager, and my home phone at the bottom 
+			I sent two letters back in autumn, you must not-a got 'em 
+			There probably was a problem at the post office or somethin 
+			Sometimes I scribble addresses too sloppy when I jot 'em 
+			but anyways; fuck it, what's been up? Man how's your daughter? 
+			My girlfriend's pregnant too, I'm bout to be a father 
+			If I have a daughter, guess what I'ma call her? 
+			I'ma name her Bonnie 
+			I read about your Uncle Ronnie too I'm sorry 
+			I had a friend kill himself over some bitch who didn't want him 
+			I know you probably hear this everyday, but I'm your biggest fan 
+			I even got the underground shit that you did with Skam 
+			I got a room full of your posters and your pictures man 
+			I like the shit you did with Rawkus too, that shit was fat 
+			Anyways, I hope you get this man, hit me back, 
+			just to chat, truly yours, your biggest fan 
+			This is Stan 
+		</p>
+		<p>Dear Slim, you still ain't called or wrote, I hope you have a chance 
+			I ain't mad - I just think it's FUCKED UP you don't answer fans 
+			If you didn't wanna talk to me outside your concert 
+			you didn't have to, but you coulda signed an autograph for Matthew 
+			That's my little brother man, he's only six years old 
+			We waited in the blistering cold for you, 
+			four hours and you just said, "No." 
+			That's pretty shitty man - you're like his fuckin idol 
+			He wants to be just like you man, he likes you more than I do 
+			I ain't that mad though, I just don't like bein lied to 
+			Remember when we met in Denver - you said if I'd write you 
+			you would write back - see I'm just like you in a way 
+			I never knew my father neither; 
+			he used to always cheat on my mom and beat her 
+			I can relate to what you're saying in your songs 
+			so when I have a shitty day, I drift away and put 'em on 
+			cause I don't really got shit else so that shit helps when I'm depressed 
+			I even got a tattoo of your name across the chest 
+			Sometimes I even cut myself to see how much it bleeds 
+			It's like adrenaline, the pain is such a sudden rush for me 
+			See everything you say is real, and I respect you cause you tell it 
+			My girlfriend's jealous cause I talk about you 24/7 
+			But she don't know you like I know you Slim, no one does 
+			She don't know what it was like for people like us growin up 
+			You gotta call me man, I'll be the biggest fan you'll ever lose 
+			Sincerely yours, Stan -- P.S. 
+			We should be together too 
+		</p>
+		<p>
+			Dear Stan, I meant to write you sooner but I just been busy 
+			You said your girlfriend's pregnant now, how far along is she? 
+			Look, I'm really flattered you would call your daughter that 
+			and here's an autograph for your brother, 
+			I wrote it on the Starter cap 
+			I'm sorry I didn't see you at the show, I musta missed you 
+			Don't think I did that shit intentionally just to diss you 
+			But what's this shit you said about you like to cut your wrists too? 
+			I say that shit just clownin dogg, 
+			c'mon - how fucked up is you? 
+			You got some issues Stan, I think you need some counseling 
+			to help your ass from bouncing off the walls when you get down some 
+			And what's this shit about us meant to be together? 
+			That type of shit'll make me not want us to meet each other 
+			I really think you and your girlfriend need each other 
+			or maybe you just need to treat her better 
+			I hope you get to read this letter, I just hope it reaches you in time 
+			before you hurt yourself, I think that you'll be doin just fine 
+			if you relax a little, I'm glad I inspire you but Stan 
+			why are you so mad? Try to understand, that I do want you as a fan 
+			I just don't want you to do some crazy shit 
+			I seen this one shit on the news a couple weeks ago that made me sick 
+			Some dude was drunk and drove his car over a bridge 
+			and had his girlfriend in the trunk, and she was pregnant with his kid 
+			and in the car they found a tape, but they didn't say who it was to 
+			Come to think about, his name was.. it was you 
+			Damn!
+		</p>
+	</div>
 </body>
 </html>
