--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="song-container">
-		<h1>Eminem</h1>
+		<h1 class="big-header">Eminem</h1>
 		<h2>Song: Stan</h2>
 		<p>Dear Slim, I wrote but you still ain't callin 
 			I left my cell, my pager, and my home phone at the bottom 
