--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="song-container">
 		<h1>Eminem</h1>
-		<h2>Song: Stan</h2>
+		<h2>Title: Stan</h2>
 		<p>Dear Slim, I wrote but you still ain't callin 
 			I left my cell, my pager, and my home phone at the bottom 
 			I sent two letters back in autumn, you must not-a got 'em 
