Add wrapper class to body

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Learning git 2</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="wrapper">
 	<div class="song-container">
 		<h1 class="big-header">Eminem</h1>
 		<h2>Song: Stan</h2>
