Change body background and Add class chor

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			just to chat, truly yours, your biggest fan 
 			This is Stan 
 		</p>
-		<p>Dear Slim, you still ain't called or wrote, I hope you have a chance 
+		<p class="chor">Dear Slim, you still ain't called or wrote, I hope you have a chance 
 			I ain't mad - I just think it's FUCKED UP you don't answer fans 
 			If you didn't wanna talk to me outside your concert 
 			you didn't have to, but you coulda signed an autograph for Matthew 
