Add task runner

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Learning git part 3</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="wrapper">
 	<div class="song-container">
@@ -86,6 +86,9 @@
 			Damn!
 		</p>
 	</div>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio magnam, dignissimos enim totam nam repellendus voluptas laudantium vero. Magni provident ducimus sequi voluptatibus alias est atque natus, aspernatur in officia.</p>
+	<div class="flex-container">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio magnam, dignissimos enim totam nam repellendus voluptas laudantium vero. Magni provident ducimus sequi voluptatibus alias est atque natus, aspernatur in officia.</p>
+	</div>
+	
 </body>
 </html>
